--- a/templates/departments/department_list.html
+++ b/templates/departments/department_list.html
@@ -4,7 +4,7 @@
 {% block content %}
     {% if user.is_authorized %}
         <h3 class="light-blue-text text-darken-1">Departments</h3>
-        {% if user.is_admin %}<a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_department' %}"><i class="material-icons left">add</i>Create qualification</a><br><br>{% endif %}
+        {% if user.is_admin %}<a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_department' %}"><i class="material-icons left">add</i>Create department</a><br><br>{% endif %}
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
