--- a/templates/users/create_user.html
+++ b/templates/users/create_user.html
@@ -5,12 +5,13 @@
     {% if user.is_admin %}
         <h3 class="light-blue-text text-darken-1">Create user</h3>
         <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'useraccounts' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'create_user' %}">
-                {% csrf_token %}
+        <form method="POST" action="{% url 'create_user' %}">
+            {% csrf_token %}
+            <div class="card">
                 <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1">Base data</div>
                     <div class="row">
-                        <div class="input-field col s4">
+                        <div class="input-field col s6">
                             <i class="material-icons prefix">person</i>
                             <label for="id_username">Username</label>
                             <input type="text" name="username" autofocus autocapitalize="none" maxlength="15" required id="id_username" class="grey-text text-darken-4">
@@ -22,55 +23,19 @@
                             <input type="email" name="email" autocapitalize="none" maxlength="150" required id="id_email" class="grey-text text-darken-4">
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
-                        <div class="input-field col s2">
-                            <i class="material-icons prefix">tag</i>
-                            <label for="id_staff_id">Staff ID</label>
-                            <input type="text" name="staff_id" autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">local_offer</i>
-                            <select name="role">
-                                <option value="A">Admin</option>
-                                <option value="P">Planner</option>
-                                <option value="E" selected>Employee</option>
-                            </select>
-                            <label>Role</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s2">
-                            <label>
-                                <input type="checkbox" name="is_external" />
-                                <span>External</span>
-                            </label>
-                        </div>
-                        <div class="input-field col s2">
-                            <label>
-                                <input type="checkbox" checked="checked" name="is_active" />
-                                <span>Active</span>
-                            </label>
-                        </div>
-                        <div class="input-field col s2">
-                            <label>
-                                <input type="checkbox" name="is_verified" />
-                                <span>Verified</span>
-                            </label>
-                        </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
-                            <i class="material-icons prefix">event_calendar</i>
-                            <input id="id_start_contract" name="start_contract" type="text" class="datepicker grey-text text-darken-4">
-                            <label for="id_start_contract">Start contract</label>
-                            <!-- set today as default date -->
-                            <script>$("#id_start_contract").attr("value", new Date().toISOString().slice(0, 10))</script>
+                            <i class="material-icons prefix">vpn_key</i>
+                            <label for="id_password1">Password</label>
+                            <input type="password" name="password1" autocapitalize="none" maxlength="15" required id="id_password1" class="grey-text text-darken-4">
+                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
                         <div class="input-field col s6">
-                            <i class="material-icons prefix">event_calendar</i>
-                            <input id="id_end_contract" name="end_contract" type="text" class="datepicker grey-text text-darken-4">
-                            <label for="id_end_contract">End contract</label>
+                            <i class="material-icons prefix">vpn_key</i>
+                            <label for="id_password2">Password (repeat)</label>
+                            <input type="password" name="password2" autocapitalize="none" maxlength="15" required id="id_password2" class="grey-text text-darken-4">
+                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
                     </div>
                     <div class="row">
@@ -111,26 +76,82 @@
                             <input type="text" name="zip_city" autocapitalize="none" maxlength="50" id="id_zip_city" class="grey-text text-darken-4">
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1">Contract details</div>
                     <div class="row">
-                        <div class="input-field col s6">
-                            <i class="material-icons prefix">vpn_key</i>
-                            <label for="id_password1">Password</label>
-                            <input type="password" name="password1" autocapitalize="none" maxlength="15" required id="id_password1" class="grey-text text-darken-4">
+                        <div class="input-field col s4">
+                            <i class="material-icons prefix">local_offer</i>
+                            <select name="role">
+                                <option value="A">Admin</option>
+                                <option value="P">Planner</option>
+                                <option value="E" selected>Employee</option>
+                            </select>
+                            <label>Role</label>
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
-                        <div class="input-field col s6">
-                            <i class="material-icons prefix">vpn_key</i>
-                            <label for="id_password2">Password (repeat)</label>
-                            <input type="password" name="password2" autocapitalize="none" maxlength="15" required id="id_password2" class="grey-text text-darken-4">
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">tag</i>
+                            <label for="id_staff_id">Staff ID</label>
+                            <input type="text" name="staff_id" autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-darken-4">
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" name="is_external" />
+                                <span>External</span>
+                            </label>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" checked="checked" name="is_active" />
+                                <span>Active</span>
+                            </label>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" name="is_verified" />
+                                <span>Verified</span>
+                            </label>
                         </div>
                     </div>
-                </div>
-                <div class="card-action">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">event_calendar</i>
+                            <input id="id_start_contract" name="start_contract" type="text" class="datepicker grey-text text-darken-4">
+                            <label for="id_start_contract">Start contract</label>
+                            <!-- set today as default date -->
+                            <script>$("#id_start_contract").attr("value", new Date().toISOString().slice(0, 10))</script>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">event_calendar</i>
+                            <input id="id_end_contract" name="end_contract" type="text" class="datepicker grey-text text-darken-4">
+                            <label for="id_end_contract">End contract</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s4">
+                            <i class="material-icons prefix">local_offer</i>
+                            {{ form.department }}
+                            <label>Department</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <i class="material-icons prefix">schedule</i>
+                            <label for="id_work_hours">Work hours (hours / week)</label>
+                            <input type="number" name="work_hours" value="{{ selected_user.work_hours }}" autocapitalize="none" maxlength="50" id="id_work_hours" class="grey-text text-darken-4">
+                        </div>
+                        <div class="input-field col s4">
+                            <i class="material-icons prefix">flight_takeoff</i>
+                            <label for="id_holiday_count">Holiday (days / year)</label>
+                            <input type="number" name="holiday_count" value="{{ selected_user.holiday_count }}" autocapitalize="none" maxlength="50" id="id_holiday_count" class="grey-text text-darken-4">
+                        </div>
+                    </div>
                     <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">person_add</i>Create user</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
