--- a/templates/departments/department_list.html
+++ b/templates/departments/department_list.html
@@ -26,7 +26,7 @@
                             <td>{{ entry.description }}</td>
                             <td>
                                 {% for qualification in entry.qualifications %}
-                                    <span class="new badge amber darken-1 black-text" data-badge-caption="">
+                                    <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
                                         <b>{{ qualification.qualification.name }}</b>
                                     </span>
                                 {% endfor %}
