--- a/templates/users/edit_basedata.html
+++ b/templates/users/edit_basedata.html
@@ -5,39 +5,36 @@
     {% if user.is_authenticated %}
         <h3 class="light-blue-text text-darken-1">Edit base data</h3>
         <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'base' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'edit_basedata' %}">
-                {% csrf_token %}
+        <form method="POST" action="{% url 'edit_basedata' %}">
+            {% csrf_token %}
+            <div class="card">
                 <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1">Base data</div>
                     <div class="row">
-                        <div class="input-field col s4">
+                        <div class="input-field col s6">
                             <i class="material-icons prefix">person</i>
                             <label for="id_username">Username</label>
                             <input type="text" name="username" autofocus value="{{ user.username }}" autocapitalize="none" maxlength="15" disabled id="id_username" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">can't be changed</span>
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">mail</i>
                             <label for="id_email">E-Mail</label>
                             <input type="email" name="email" value="{{ user.email }}" autocapitalize="none" maxlength="150" required id="id_email" class="grey-text text-darken-4">
                         </div>
-                        <div class="input-field col s2">
-                            <i class="material-icons prefix">tag</i>
-                            <label for="id_staff_id">Staff ID</label>
-                            <input type="text" name="staff_id" value="{{ user.staff_id }}" autocapitalize="none" maxlength="15" disbled id="id_staff_id" class="grey-text text-lighten-1">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">can't be changed</span>
-                        </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="material-icons prefix">label</i>
                             <label for="id_first_name">First name</label>
-                            <input type="text" name="first_name" value="{{ user.first_name }}" autocapitalize="none" maxlength="50" required id="id_first_name" class="grey-text text-darken-4">
+                            <input type="text" name="first_name" value="{{ user.first_name }}" autocapitalize="none" maxlength="50" disabled id="id_first_name" class="grey-text text-lighten-1">
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">label</i>
                             <label for="id_last_name">Last name</label>
-                            <input type="text" name="last_name" value="{{ user.last_name }}" autocapitalize="none" maxlength="50" required id="id_last_name" class="grey-text text-darken-4">
+                            <input type="text" name="last_name" value="{{ user.last_name }}" autocapitalize="none" maxlength="50" disabled id="id_last_name" class="grey-text text-lighten-1">
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
                         </div>
                     </div>
                     <div class="row">
@@ -64,12 +61,74 @@
                             <input type="text" name="zip_city" value="{{ user.zip_city }}" autocapitalize="none" maxlength="50" id="id_zip_city" class="grey-text text-darken-4">
                         </div>
                     </div>
-                </div>
-                <div class="card-action">
                     <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">update</i>Update data</button>
                 </div>
-            </form>
-        </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1">Contract details</div>
+                    <div class="row">
+                        <div class="input-field col s4">
+                            <i class="material-icons prefix">local_offer</i>
+                            <label for="id_start_contract">Role</label>
+                            <input type="text" name="start_contract" value="{% if user.role == 'A' %}Admin{% elif user.role == 'P' %}Planner{% else %}Employee{% endif %}" disabled autocapitalize="none" maxlength="50" id="id_start_contract" class="grey-text text-lighten-1">
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                        </div>
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">tag</i>
+                            <label for="id_staff_id">Staff ID</label>
+                            <input type="text" name="staff_id" value="{{ user.staff_id }}" disabled autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-lighten-1">
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" {% if user.is_external == True %}checked="checked"{% endif %} disabled name="is_external" />
+                                <span>External</span>
+                            </label>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" {% if user.is_active == True %}checked="checked"{% endif %} disabled name="is_active" />
+                                <span>Active</span>
+                            </label>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" {% if user.is_verified == True %}checked="checked"{% endif %} disabled name="is_verified" />
+                                <span>Verified</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">event_calendar</i>
+                            <label for="id_start_contract">Start contract</label>
+                            <input type="text" name="start_contract" value="{{ user.start_contract|date:"Y-m-d" }}" disabled autocapitalize="none" maxlength="50" id="id_start_contract" class="grey-text text-lighten-1">
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">event_calendar</i>
+                            <label for="id_end_contract">End contract</label>
+                            <input type="text" name="end_contract" value="{{ user.end_contract|date:"Y-m-d" }}" disabled autocapitalize="none" maxlength="50" id="id_end_contract" class="grey-text text-lighten-1">
+                            <span class="helper-text grey-text text-lighten-1">can't be changed</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">tag</i>
+                            <div class="chips chips-initial">
+                                {% for entry in associated_qualifications %}
+                                    <a class="chip amber darken-1 white-text z-depth-1">
+                                        {{ entry.qualification.name }}
+                                    </a>
+                                {% endfor %}
+                            </div>
+                            <span class="helper-text grey-text text-lighten-1">Qualifications</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
