--- a/templates/users/edit_user.html
+++ b/templates/users/edit_user.html
@@ -18,19 +18,20 @@
             <div class="modal-content">
                 <h5 class="light-blue-text text-darken-1"><b>Add qualification to {{ selected_user }}</b></h5>
                 {% for qualification in non_associated_qualifications %}
-                    <a class="chip light-blue darken-1 white-text" href="{% url 'add_employee_qualification' selected_user.id qualification.id %}">{{ qualification }}</a>
+                    <a class="chip light-blue darken-1 white-text z-depth-1" href="{% url 'add_employee_qualification' selected_user.id qualification.id %}">{{ qualification }}</a>
                 {% endfor %}
             </div>
         </div>
 
         <h3 class="light-blue-text text-darken-1">Edit {{ selected_user }}</h3>
         <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'useraccounts' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <div class="card-content">
-                <form method="POST" action="{% url 'edit_user' selected_user.id %}">
-                    {% csrf_token %}
+        <form method="POST" action="{% url 'edit_user' selected_user.id %}">
+            {% csrf_token %}
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1">Base data</div>
                     <div class="row">
-                        <div class="input-field col s4">
+                        <div class="input-field col s6">
                             <i class="material-icons prefix">person</i>
                             <label for="id_username">Username</label>
                             <input type="text" name="username" autofocus value="{{ selected_user.username }}" autocapitalize="none" maxlength="15" required id="id_username" class="grey-text text-darken-4">
@@ -42,56 +43,6 @@
                             <input type="email" name="email" value="{{ selected_user.email }}" autocapitalize="none" maxlength="150" required id="id_email" class="grey-text text-darken-4">
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
-                        <div class="input-field col s2">
-                            <i class="material-icons prefix">tag</i>
-                            <label for="id_staff_id">Staff ID</label>
-                            <input type="text" name="staff_id" value="{{ selected_user.staff_id }}" autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">local_offer</i>
-                            <select name="role">
-                                <option value="A" {% if selected_user.role == 'A' %}selected{% endif %}>Admin</option>
-                                <option value="P" {% if selected_user.role == 'P' %}selected{% endif %}>Planner</option>
-                                <option value="E" {% if selected_user.role == 'E' %}selected{% endif %}>Employee</option>
-                            </select>
-                            <label>Role</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s2">
-                            <label>
-                                <input type="checkbox" {% if selected_user.is_external == True %}checked="checked"{% endif %} name="is_external" />
-                                <span>External</span>
-                            </label>
-                        </div>
-                        <div class="input-field col s2">
-                            <label>
-                                <input type="checkbox" {% if selected_user.is_active == True %}checked="checked"{% endif %} name="is_active" />
-                                <span>Active</span>
-                            </label>
-                        </div>
-                        <div class="input-field col s2">
-                            <label>
-                                <input type="checkbox" {% if selected_user.is_verified == True %}checked="checked"{% endif %} name="is_verified" />
-                                <span>Verified</span>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">tag</i>
-                            <div class="chips chips-initial">
-                                {% for entry in associated_qualifications %}
-                                    <a class="chip light-blue darken-1 white-text" href="{% url 'remove_employee_qualification' selected_user.id entry.qualification.id %}">
-                                        {{ entry.qualification.name }} <i class="material-icons tiny">close</i>
-                                    </a>
-                                {% endfor %}
-                            </div>
-                            <span class="helper-text grey-text text-lighten-1">Qualifications</span>
-                        </div>
-                        <a data-target="add-qualification-modal" class="modal-trigger waves-effect waves-light btn light-blue darken-1 right"><i class="material-icons left">add</i>Add qualification</a>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
@@ -131,6 +82,47 @@
                             <input type="text" name="zip_city" value="{{ selected_user.zip_city }}" autocapitalize="none" maxlength="50" id="id_zip_city" class="grey-text text-darken-4">
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <div class="card-title light-blue-text text-darken-1">Contract details</div>
+                    <div class="row">
+                        <div class="input-field col s4">
+                            <i class="material-icons prefix">local_offer</i>
+                            <select name="role">
+                                <option value="A" {% if selected_user.role == 'A' %}selected{% endif %}>Admin</option>
+                                <option value="P" {% if selected_user.role == 'P' %}selected{% endif %}>Planner</option>
+                                <option value="E" {% if selected_user.role == 'E' %}selected{% endif %}>Employee</option>
+                            </select>
+                            <label>Role</label>
+                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
+                        </div>
+                        <div class="input-field col s2">
+                            <i class="material-icons prefix">tag</i>
+                            <label for="id_staff_id">Staff ID</label>
+                            <input type="text" name="staff_id" value="{{ selected_user.staff_id }}" autocapitalize="none" maxlength="15" required id="id_staff_id" class="grey-text text-darken-4">
+                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" {% if selected_user.is_external == True %}checked="checked"{% endif %} name="is_external" />
+                                <span>External</span>
+                            </label>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" {% if selected_user.is_active == True %}checked="checked"{% endif %} name="is_active" />
+                                <span>Active</span>
+                            </label>
+                        </div>
+                        <div class="input-field col s2">
+                            <label>
+                                <input type="checkbox" {% if selected_user.is_verified == True %}checked="checked"{% endif %} name="is_verified" />
+                                <span>Verified</span>
+                            </label>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="material-icons prefix">event_calendar</i>
@@ -164,11 +156,25 @@
                             <input type="number" name="holiday_count" value="{{ selected_user.holiday_count }}" autocapitalize="none" maxlength="50" id="id_holiday_count" class="grey-text text-darken-4">
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">tag</i>
+                            <div class="chips chips-initial">
+                                {% for entry in associated_qualifications %}
+                                    <a class="chip light-blue darken-1 white-text z-depth-1" href="{% url 'remove_employee_qualification' selected_user.id entry.qualification.id %}">
+                                        {{ entry.qualification.name }} <i class="material-icons tiny">close</i>
+                                    </a>
+                                {% endfor %}
+                            </div>
+                            <span class="helper-text grey-text text-lighten-1">Qualifications</span>
+                        </div>
+                        <a data-target="add-qualification-modal" class="modal-trigger waves-effect waves-light btn light-blue darken-1 right"><i class="material-icons left">add</i>Add qualification</a>
+                    </div>
                     <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Edit user</button>
                     <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
-                </form>
+                </div>
             </div>
-        </div>
+        </form>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
