--- a/templates/users/employee_list.html
+++ b/templates/users/employee_list.html
@@ -26,7 +26,7 @@
                             <td>{{ entry.email }}<br>{{ entry.telephone_home }}<br>{{ entry.telephone_mobile }}</td>
                             <td>{{ entry.department.name }}<br>
                                 {% for qualification in entry.qualifications %}
-                                <span class="new badge amber darken-1 black-text" data-badge-caption="">
+                                <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
                                     <b>{{ qualification.qualification.name }}</b>
                                 </span>
                                 {% endfor %}
