--- a/templates/departments/edit_department.html
+++ b/templates/departments/edit_department.html
@@ -5,7 +5,7 @@
     {% if user.is_admin %}
         <div id="delete-modal" class="modal content-section red darken-1 white-text">
             <div class="modal-content">
-                <h5><b>Delete {{ selected_qualification }}</b></h5>
+                <h5><b>Delete {{ selected_department }}</b></h5>
                 <p>Are you sure you really want to delete {{ selected_department }}? All assigned data will be gone forever and may cause corrupted past data. It is not advised to remove a department if data is associated to it.</p>
             </div>
             <div class="modal-footer">
