prepared shift and day templates

--- a/templates/demand/create_demand.html
+++ b/templates/demand/create_demand.html
@@ -46,10 +46,10 @@
                         <div class="input-field col s12">
                             <i class="material-icons prefix">chat_bubble</i>
                             <label for="id_note">Note</label>
-                            <textarea name="note" autocapitalize="none" required id="id_note" class="materialize-textarea grey-text text-darken-4"></textarea>
+                            <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4"></textarea>
                         </div>
                     </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">add</i>Create department</button>
+                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">add</i>Create demand</button>
                 </div>
             </form>
         </div>
